# llm-handbook-book

./: .env  pyproject.toml
.zen/: config.yaml
llm_engineering/: __init__.py  settings.py
llm_engineering/application/utils/: __init__.py  split_user_full_name.py
llm_engineering/domain/: __init__.py  documents.py  exceptions.py
llm_engineering/domain/base/: __init__.py  nosql.py
llm_engineering/infrastructure/db/: mongo.py
pipelines/: __init__.py  digital_data_etl.py
steps/: __init__.py
steps/etl/: __init__.py  crawl_links.py  get_or_create_user.py
tools/: run.py
